# pgooseql

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: crud.rs  transactions.rs
examples/gossamer/: project.toml
examples/gossamer/migrations/: 0001_create_notes.sql
examples/gossamer/src/: main.gos
src/: lib.rs
