[package]
name = "pgooseql"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "PostgreSQL driver for Gossamer's std::database::sql"
license = "MIT"

[lib]
crate-type = ["rlib"]

[workspace]

[dependencies]
gossamer-std = { path = "../gossamer/crates/gossamer-std" }
gossamer-binding = { path = "../gossamer/crates/gossamer-binding" }
gossamer-runtime = { path = "../gossamer/crates/gossamer-runtime" }
tokio = { version = "1", features = ["rt", "net", "time", "sync"] }
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
tokio-postgres-rustls = "0.13"
rustls = "0.23"
rustls-native-certs = "0.8"
webpki-roots = "1"
futures-util = "0.3"
bytes = "1"
chrono = { version = "0.4", default-features = false }
uuid = "1"
serde = "1"
serde_json = "1"
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
